--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "qs": "^6.11.2",
     "vant": "^4.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
