--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
+    "pinia": "^2.1.3",
     "qs": "^6.11.2",
     "vant": "^4.4.0",
     "vue": "^3.2.47",
