--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "pinia": "^2.1.3",
+    "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.2",
     "vant": "^4.4.0",
     "vue": "^3.2.47",
